Ready to production

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <title>VW - React</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" href="dist/css/home.css" /> --> <!-- PRODUCTION -->
+  <link rel="stylesheet" href="dist/css/home.css" /> <!-- PRODUCTION -->
 </head>
 <body>
   <div id="home-container"></div>
-  <!-- <script src="dist/js/home.js"></script> --> <!-- PRODUCTION -->
-  <script src="http://localhost:9000/js/home.js"></script> <!-- DEVELOPMENT -->
+  <script src="dist/js/home.js"></script> <!-- PRODUCTION -->
+  <!-- <script src="http://localhost:9000/js/home.js"></script> DEVELOPMENT -->
 </body>
 </html>
